Fix spacing between button and description on 3column preview

--- a/3column-preview-card-component/css/styles.css
+++ b/3column-preview-card-component/css/styles.css
@@ -104,6 +104,7 @@ a {
 }
 .card__description {
   opacity: 0.75;
+  margin-bottom: 3em;
 }
 .button {
   border: 0;
